[package]
name = "byteorder_bare-io"
version = "0.1.0+byteorder.1.3.4"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>", "Brendan Molloy <brendan@bbqsrc.net>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "https://docs.rs/byteorder"
homepage = "https://github.com/BurntSushi/byteorder"
repository = "https://github.com/BurntSushi/byteorder"
readme = "README.md"
categories = ["encoding", "parsing"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense OR MIT"
exclude = ["/ci/*"]
build = "build.rs"
edition = "2018"

[lib]
name = "byteorder"
bench = false

[dependencies]
bare-io = { git = "https://github.com/bbqsrc/core2", branch = "main" }

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
rand = "0.6"

[features]
default = ["std"]
std = ["bare-io/std"]

[profile.bench]
opt-level = 3
